--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
   font-family: var(--font-serif);
 }
 
-button {
+button,
+.button {
   border: none;
   padding: 20px 56px;
   letter-spacing: 1px;
@@ -50,7 +51,9 @@ iframe {
 
 /* site header */
 .site-header {
-  padding: 80px 0;
+  height: 192px;
+  display: flex;
+  align-items: center;
   background: var(--color-gray);
 }
 
@@ -73,7 +76,7 @@ section.bg-blue {
   gap: 64px 0;
   display: flex;
   flex-direction: column;
-  width: min(100% - 32px, 1100px);
+  width: min(100% - 64px, 1100px);
   margin-inline: auto;
 }
 
@@ -83,7 +86,13 @@ section.bg-blue {
   display: flex;
 }
 
+.site-nav__menu-item {
+  min-width: max-content;
+}
+
 .site-nav__menu-item > a {
+  height: 32px;
+  display: flex;
   letter-spacing: 1px;
   text-decoration: none;
   text-transform: uppercase;
@@ -102,9 +111,11 @@ section.bg-blue {
   flex-direction: column;
 }
 
-.headline--center {
-  margin: 0 auto;
-  text-align: center;
+@media only screen and (min-width: 992px) {
+  .headline--center {
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 
 .headline__title {
@@ -127,13 +138,13 @@ h2.headline__title {
 
 /* card */
 .card-group {
-  gap: 0 48px;
+  gap: 32px;
   display: flex;
   justify-content: space-between;
 }
 
 .card {
-  gap: 0 24px;
+  gap: 0 16px;
   display: flex;
   align-items: center;
 }
@@ -169,4 +180,57 @@ h2.headline__title {
 
 .copyright__textarea {
   font-size: 14px;
+}
+
+@media only screen and (max-width: 1180px) {
+  .card-group {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  br {
+    display: none;
+  }
+
+  section {
+    padding: 48px 0;
+  }
+
+  iframe {
+    height: 256px;
+  }
+
+  .site-header {
+    top: 0;
+    height: 96px;
+    position: sticky;
+  }
+
+  .site-nav__menu {
+    overflow-x: scroll;
+  }
+
+  .container {
+    gap: 24px 0;
+  }
+
+  .headline {
+    gap: 24px 0;
+  }
+
+  h1.headline__title {
+    font-size: 32px;
+  }
+
+  h2.headline__title {
+    font-size: 28px;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  body {
+    font-size: 14px;
+  }
 }
