--- a/style.css
+++ b/style.css
@@ -35,10 +35,16 @@ body {
 
 button,
 .button {
+  height: 56px;
   border: none;
-  padding: 20px 56px;
+  display: flex;
+  padding: 0 56px;
+  cursor: pointer;
+  align-items: center;
   letter-spacing: 1px;
+  text-decoration: unset;
   max-width: max-content;
+  justify-content: center;
   text-transform: uppercase;
   color: var(--color-white);
   background: var(--color-blue);
@@ -81,9 +87,15 @@ section.bg-blue {
 }
 
 /* site navigation */
+.site-nav,
 .site-nav__menu {
-  gap: 0 40px;
   display: flex;
+  gap: 16px 40px;
+  align-items: center;
+}
+
+.site-nav {
+  position: relative;
 }
 
 .site-nav__menu-item {
@@ -91,8 +103,6 @@ section.bg-blue {
 }
 
 .site-nav__menu-item > a {
-  height: 32px;
-  display: flex;
   letter-spacing: 1px;
   text-decoration: none;
   text-transform: uppercase;
@@ -102,6 +112,12 @@ section.bg-blue {
 .site-nav__menu-item--active > a {
   color: var(--color-blue);
   font-weight: var(--font-weight-md);
+}
+
+.site-nav__button {
+  height: 32px;
+  display: none;
+  margin-left: auto;
 }
 
 /* headline */
@@ -204,12 +220,30 @@ h2.headline__title {
 
   .site-header {
     top: 0;
-    height: 96px;
+    height: 64px;
     position: sticky;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+  }
+
+  .site-nav__button {
+    display: flex;
   }
 
   .site-nav__menu {
-    overflow-x: scroll;
+    right: 0;
+    top: 48px;
+    width: 100%;
+    display: none;
+    max-width: 180px;
+    position: absolute;
+    padding: 32px 16px;
+    flex-direction: column;
+    color: var(--color-white);
+    background: var(--color-gray-light);
+  }
+
+  .site-nav__menu--active {
+    display: flex;
   }
 
   .container {
